--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "@capacitor/cli": "^3.4.1",
+    "@types/color": "^3.0.3",
     "typescript": "^4.6.2",
     "vite": "^2.8.6",
     "vite-plugin-solid": "^2.2.6"
@@ -19,6 +20,7 @@
     "@capacitor/android": "^3.4.1",
     "@capacitor/core": "^3.4.1",
     "@capacitor/ios": "^3.4.1",
+    "color": "^4.2.3",
     "solid-js": "^1.3.12"
   }
 }
