--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@capacitor/core": "^3.4.1",
     "@capacitor/ios": "^3.4.1",
     "color": "^4.2.3",
-    "solid-js": "^1.3.12"
+    "solid-js": "^1.3.12",
+    "solid-spring": "^0.0.7"
   }
 }
