bunch of changes

--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-	"appId": "com.example.app",
-	"appName": "capacitor-solid-template",
+	"appId": "com.DMOCodename.app",
+	"appName": "DMO Codename",
 	"webDir": "dist",
 	"bundledWebRuntime": false
 }
